--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <br>
 <a href="examples/webvr_cubes.html">WebVR cubes</a><br>
-<a href="examples/webvr_shadow.html">WebVR shadows</a><br>
+<br>
+<a href="examples/webvr_shadows.html">WebVR shadows</a><br>
