--- a/examples/webvr_shadows.html
+++ b/examples/webvr_shadows.html
@@ -34,6 +34,8 @@
 				document.body.appendChild( WEBVR.getMessage() );
 
 			}
+			var effect, controls;
+
 var scene = new THREE.Scene();
 var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
 
@@ -84,19 +86,44 @@ camera.position.y = 2;
 camera.lookAt(box.position);
 
 
+				controls = new THREE.VRControls( camera );
+				effect = new THREE.VREffect( renderer );
 				WEBVR.getVRDisplay( function ( display ) {
 
 					document.body.appendChild( WEBVR.getButton( display, renderer.domElement ) );
 
 				} );
+				window.addEventListener( 'resize', onWindowResize, false );
 
-var render = function () {
+			animate();
+
+			function onWindowResize() {
+
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+
+				effect.setSize( window.innerWidth, window.innerHeight );
+
+			}
+
+			//
+
+			function animate() {
+
+				effect.requestAnimationFrame( animate );
+				render();
+
+			}
+
+function render() {
   requestAnimationFrame( render );
 
   box.rotation.x += 0.02;
   box.rotation.y += 0.02;
 
-  renderer.render(scene, camera);
+//  renderer.render(scene, camera);
+  controls.update();
+  effect.render( scene, camera );
 };
 
 render();
