--- a/examples/webvr_shadows.html
+++ b/examples/webvr_shadows.html
@@ -116,7 +116,7 @@ camera.lookAt(box.position);
 			}
 
 function render() {
-  requestAnimationFrame( render );
+//  requestAnimationFrame( render );
 
   box.rotation.x += 0.02;
   box.rotation.y += 0.02;
