--- a/examples/webvr_cubes.html
+++ b/examples/webvr_cubes.html
@@ -127,6 +127,8 @@
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.sortObjects = false;
+renderer.shadowMap.enabled = true;
+renderer.shadowMap.type = THREE.PCFSoftShadowMap;
 				container.appendChild( renderer.domElement );
 
 				controls = new THREE.VRControls( camera );
