--- a/examples/webvr_shadows.html
+++ b/examples/webvr_shadows.html
@@ -55,11 +55,11 @@ document.body.appendChild( renderer.domElement );
 
 var light = new THREE.PointLight( 0xffffff, 1, 100 );
 light.position.set( 0, 12, 0 );
-light.castShadow = true;
+/*light.castShadow = true;
 light.shadow.mapSize.width = 1024;
 light.shadow.mapSize.height = 1024;
-
-light.shadow.camera.left = 500
+  
+light.shadow.camera.left = 500*/
 scene.add( light );
 
 var ambientLight = new THREE.AmbientLight( 0x151515 ); // soft white light
