--- a/examples/webvr_shadows.html
+++ b/examples/webvr_shadows.html
@@ -55,6 +55,7 @@ document.body.appendChild( renderer.domElement );
 
 var light = new THREE.PointLight( 0xffffff, 1, 100 );
 light.position.set( 0, 12, 0 );
+//?
 /*light.castShadow = true;
 light.shadow.mapSize.width = 1024;
 light.shadow.mapSize.height = 1024;
@@ -69,13 +70,13 @@ scene.add( ambientLight );
     var boxGeometry = new THREE.BoxGeometry( 1, 1, 1 );
     var boxMaterial = new THREE.MeshPhongMaterial( { color: 0xdddddd, specular: 0x999999, shininess: 15, shading: THREE.FlatShading } );
     var box = new THREE.Mesh( boxGeometry, boxMaterial );
-    box.castShadow = true;
+//?    box.castShadow = true;
     scene.add( box );
 
 var planeGeometry = new THREE.PlaneGeometry( 20, 20, 32, 32 );
 var planeMaterial = new THREE.MeshPhongMaterial( { color: 0x00dddd, specular: 0x009900, shininess: 10, shading: THREE.FlatShading } )
 var plane = new THREE.Mesh( planeGeometry, planeMaterial );
-plane.receiveShadow = true;
+//?plane.receiveShadow = true;
 scene.add( plane );
 plane.position.y = -2;
 plane.rotation.x = -Math.PI/2;
