--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <a href="examples/webvr_cubes.html">WebVR cubes</a><br>
 <br>
 <a href="examples/webvr_shadows.html">WebVR shadows</a><br>
+<br>
+<a href="examples/webvr_noshadows.html">WebVR no shadows</a><br>
