--- a/examples/webvr_shadows_aa.html
+++ b/examples/webvr_shadows_aa.html
@@ -39,7 +39,7 @@
 var scene = new THREE.Scene();
 var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
 
-var renderer = new THREE.WebGLRenderer({preserveDrawingBuffer:false});
+var renderer = new THREE.WebGLRenderer({preserveDrawingBuffer:false, antialias:true});
 renderer.setClearColor(0xFF0000);
 renderer.shadowMap.enabled = true;
 renderer.shadowMap.type = THREE.PCFSoftShadowMap;
