--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
 <br>
 <a href="examples/webvr_shadows.html">WebVR shadows</a><br>
 <br>
+<a href="examples/webvr_shadows.html">WebVR shadows AA</a><br>
+<br>
 <a href="examples/webvr_noshadows.html">WebVR no shadows</a><br>
+<br>
+<a href="examples/webvr_noshadows_aa.html">WebVR no shadows AA</a><br>
