--- a/examples/webvr_shadows_aa.html
+++ b/examples/webvr_shadows_aa.html
@@ -82,7 +82,7 @@ plane.position.y = -2;
 plane.rotation.x = -Math.PI/2;
 
 
-camera.position.z = 5;
+camera.position.z = 10;
 camera.position.y = 2;
 camera.lookAt(box.position);
 
@@ -122,8 +122,16 @@ function render() {
   box.rotation.x += 0.02;
   box.rotation.y += 0.02;
 
-//  renderer.render(scene, camera);
+  camera.position.x = 0;
+  camera.position.z = 0;
+  camera.position.y = 0;
+
   controls.update();
+
+  camera.position.x += 0;
+  camera.position.z += 10;
+  camera.position.y += 2;
+
   effect.render( scene, camera );
 };
 
