Adding drawingBufferPreserve test case

--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@
 <a href="examples/webvr_noshadows.html">WebVR no shadows</a><br>
 <br>
 <a href="examples/webvr_noshadows_aa.html">WebVR no shadows AA</a><br>
+<br>
+<a href="examples/webvr_noshadows_preserve.html">WebVR no shadows preserve</a><br>
